# math_contexter

./: .gitignore  PLANNING.md  README.md  ag_dataset_generator.py  ag_split_test.csv  demo_output.txt  langfuse_demo.py  output.txt  pyproject.toml  test_langfuse_integration.py  test_output.txt  upload_dataset_to_langfuse.py
src/: ag_script.txt  context_builder.py  example_output.
src/math_contexter/: __init__.py
