[project]
name = "math-contexter"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "LetterGaunt", email = "193929321+L3Gaunt@users.noreply.github.com" }
]
dependencies = [
    "dotenv>=0.9.9",
    "aiohttp>=3.11.13",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/math_contexter"]
